Linear & engine but not softmax

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,73 +2,61 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "2d623d0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from engine import Metrics"
+    "from engine import Matrics\n",
+    "from nn import Linear"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
+   "id": "1bc930b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m=Linear(4,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "e6e3f49f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a=[[2,2,2,2],[2,2,2,2]]\n",
-    "a=Metrics(a) * [5]\n",
-    "out=a.tanh()"
+    "a=[[1,0,1,1],[0,1,1,1]]\n",
+    "a=Matrics(a)\n",
+    "out=m(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "d2c20706",
+   "execution_count": 4,
+   "id": "7b2fb9f0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[10., 10., 10., 10.],\n",
-       "       [10., 10., 10., 10.]], dtype=float32)"
+       "[[1.0, 0.0, 1.0, 1.0], [0.0, 1.0, 1.0, 1.0]]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.metrics"
+    "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "db5878ea",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1., 1., 1., 1.],\n",
-       "       [1., 1., 1., 1.]], dtype=float32)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "out.metrics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "888d01f0",
    "metadata": {},
    "outputs": [
@@ -76,10 +64,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1.]]\n",
-      "[[0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0.]]\n"
+      "[[1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1.]]\n",
+      "[[ 0.01626414 -1.4950491  -0.20731798 -0.55432326]\n",
+      " [ 0.01626414 -1.4950491  -0.20731798 -0.55432326]]\n"
      ]
     }
    ],
