--- a/testing.ipynb
+++ b/testing.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "from engine import Matrics\n",
-    "from nn import Linear"
+    "from nn import Linear , SGD\n",
+    "import functional as F"
    ]
   },
   {
@@ -18,7 +19,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m=Linear(4,6)"
+    "m1=Linear(4,32)\n",
+    "m2=Linear(32,1)"
    ]
   },
   {
@@ -28,55 +30,98 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a=[[1,0,1,1],[0,1,1,1]]\n",
-    "a=Matrics(a)\n",
-    "out=m(a)"
+    "X=[[1,2,3,4],[2,3,4,5],[3,4,5,6],[4,5,6,7],[5,6,7,8]]\n",
+    "y=[5,6,7,8,9]\n",
+    "X=Matrics(X)\n",
+    "y=Matrics(y)\n",
+    "optim=SGD(m1.parameters() + m2.parameters(),learnning_rate=0.0001)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7b2fb9f0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[1.0, 0.0, 1.0, 1.0], [0.0, 1.0, 1.0, 1.0]]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "888d01f0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1. 1. 1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1. 1. 1.]]\n",
-      "[[ 0.01626414 -1.4950491  -0.20731798 -0.55432326]\n",
-      " [ 0.01626414 -1.4950491  -0.20731798 -0.55432326]]\n"
+      "[[139537.359375]]\n",
+      "[[11703995.0]]\n",
+      "[[11309550592.0]]\n",
+      "[[2.0220401464847106e+19]]\n",
+      "[[inf]]\n",
+      "[[nan]]\n",
+      "[[nan]]\n",
+      "[[nan]]\n",
+      "[[nan]]\n",
+      "[[nan]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Programming\\Python\\MachineLearning\\ML From Scratch\\NanoGrad\\engine.py:99: RuntimeWarning: overflow encountered in power\n",
+      "  out = Matrics(np.power(self.matrics,power),(self,))\n",
+      "d:\\Programming\\Python\\MachineLearning\\ML From Scratch\\NanoGrad\\engine.py:89: RuntimeWarning: overflow encountered in matmul\n",
+      "  out = Matrics((self.matrics @ other.matrics),(self,other))\n",
+      "d:\\Programming\\Python\\MachineLearning\\ML From Scratch\\NanoGrad\\engine.py:89: RuntimeWarning: invalid value encountered in matmul\n",
+      "  out = Matrics((self.matrics @ other.matrics),(self,other))\n"
      ]
     }
    ],
    "source": [
-    "out.backward()\n",
-    "print(out.grad)\n",
-    "print(a.grad)\n",
-    "#print(b.grad)\n"
+    "for i in range(10):\n",
+    "    z1=m1(X)\n",
+    "    z2=m2(z1)\n",
+    "    loss=F.mean_square_error(y,z2)\n",
+    "    optim.zero_grad(set_to_none=True)\n",
+    "    loss.backward()\n",
+    "    optim.step()\n",
+    "    print(loss)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1f76939",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7dcc8471",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m x_test=[[\u001b[32m10\u001b[39m,\u001b[32m11\u001b[39m,\u001b[32m12\u001b[39m,\u001b[32m13\u001b[39m],[\u001b[32m11\u001b[39m,\u001b[32m12\u001b[39m,\u001b[32m13\u001b[39m,\u001b[32m14\u001b[39m]]\n\u001b[32m      2\u001b[39m x_test=Matrics(x_test)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[43mm\u001b[49m(x_test)\n",
+      "\u001b[31mNameError\u001b[39m: name 'm' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "x_test=[[10,11,12,13],[11,12,13,14]]\n",
+    "x_test=Matrics(x_test)\n",
+    "m(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "787f531b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
