--- a/testing.ipynb
+++ b/testing.ipynb
@@ -9,11 +9,7 @@
    "source": [
     "from engine import Matrics\n",
     "from model import Sequential\n",
-    "from nn import Linear , SGD\n",
-    "from layers.activation import Tanh,ReLU\n",
-    "from layers.linear import BatchNorm1D\n",
-    "import functional as F\n",
-    "import numpy as np"
+    "from nn import Linear,BatchNorm1D,Tanh,Softmax,ReLU, Adam,AdaGrad"
    ]
   },
   {
@@ -23,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m=Sequential([Linear(4,8),BatchNorm1D(1,8),Tanh(),Linear(8,1)])"
+    "m=Sequential([Linear(4,8),BatchNorm1D(1,8),ReLU(),Linear(8,1)])"
    ]
   },
   {
@@ -31,18 +27,48 @@
    "execution_count": 3,
    "id": "e6e3f49f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[1., 1., 1., 1., 1., 1., 1., 1.],\n",
+      "       [1., 1., 1., 1., 1., 1., 1., 1.],\n",
+      "       [1., 1., 1., 1., 1., 1., 1., 1.],\n",
+      "       [1., 1., 1., 1., 1., 1., 1., 1.]], dtype=float32), array([1., 1., 1., 1., 1., 1., 1., 1.], dtype=float32), array([[1., 1., 1., 1., 1., 1., 1., 1.]], dtype=float32), array([1., 1., 1., 1., 1., 1., 1., 1.], dtype=float32), array([[1.],\n",
+      "       [1.],\n",
+      "       [1.],\n",
+      "       [1.],\n",
+      "       [1.],\n",
+      "       [1.],\n",
+      "       [1.],\n",
+      "       [1.]], dtype=float32), array([1.], dtype=float32)]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (6,) + inhomogeneous part.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m X=Matrics(X)\n\u001b[32m      4\u001b[39m y=Matrics(y)\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m optim=\u001b[43mAdam\u001b[49m\u001b[43m(\u001b[49m\u001b[43mm\u001b[49m\u001b[43m.\u001b[49m\u001b[43mparameters\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32md:\\Programming\\Python\\MachineLearning\\ML From Scratch\\NanoGrad\\Optimizers\\adam.py:9\u001b[39m, in \u001b[36mAdam.__init__\u001b[39m\u001b[34m(self, params, learnning_rate, eps, momentum_decay, initial_momentum, velocity_decay, initial_velocity)\u001b[39m\n\u001b[32m      7\u001b[39m \u001b[38;5;28mself\u001b[39m.lr=learnning_rate\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m([np.ones_like(p.matrics) \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m.params])\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[38;5;28mself\u001b[39m.momentum = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43marray\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mones\u001b[49m\u001b[43m(\u001b[49m\u001b[43mp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mshape\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mparams\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m * initial_momentum\n\u001b[32m     10\u001b[39m \u001b[38;5;28mself\u001b[39m.velocity = np.ones_like(\u001b[38;5;28mself\u001b[39m.momentum) * initial_velocity\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m \u001b[32m0\u001b[39m<=momentum_decay<=\u001b[32m1\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[32m0\u001b[39m<=velocity_decay<=\u001b[32m1\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mdecays can\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt be less than 0 and greater than 1\u001b[39m\u001b[33m\"\u001b[39m\n",
+      "\u001b[31mValueError\u001b[39m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (6,) + inhomogeneous part."
+     ]
+    }
+   ],
    "source": [
     "X=[[100,200,300,400],[200,300,400,500],[300,400,500,600],[400,500,600,700],[500,600,700,800]]\n",
     "y=[5,6,7,8,9]\n",
     "X=Matrics(X)\n",
     "y=Matrics(y)\n",
-    "optim=SGD(m.parameters())"
+    "optim=Adam(m.parameters())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7b2fb9f0",
    "metadata": {},
    "outputs": [
@@ -170,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7dcc8471",
    "metadata": {},
    "outputs": [
