MAE,model & parameter saving, abs,

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -47,7 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.3002902567386627, 0.6974392533302307, 0.6848686337471008, -0.3417151868343353, -0.180207297205925, 0.6339420080184937, 0.4880499839782715, -0.3094542622566223], [-0.34236907958984375, 0.6970550417900085, 0.25151968002319336, -0.5420237183570862, 0.6120857000350952, 0.5511471629142761, 0.007271590642631054, 0.3815762996673584], [-0.294209361076355, 0.2519320547580719, -0.21825873851776123, -0.22407786548137665, -0.1209300309419632, 0.6248865127563477, 0.3407875597476959, 0.5364735722541809], [0.6966133713722229, 0.39806002378463745, -0.4506463408470154, -0.42108580470085144, 0.6182765364646912, 0.19718870520591736, -0.2809877097606659, 0.4394102096557617]]\n"
+      "[[0.27235469222068787, 0.14588196575641632, -0.38651302456855774, 0.09723923355340958, 0.04509107396006584, 0.009821329265832901, -0.3346981406211853, 0.07746759057044983], [0.5809035301208496, 0.31550610065460205, -0.38128921389579773, 0.39017969369888306, -0.2939241826534271, -0.4173630177974701, -0.5751477479934692, -0.6009880304336548], [-0.6375835537910461, -0.6248117685317993, 0.2516292929649353, 0.05882471054792404, -0.1647091805934906, 0.2580658197402954, 0.14011691510677338, 0.5008559226989746], [0.6470352411270142, -0.16067199409008026, -0.5950688123703003, -0.5040922164916992, 0.001959596062079072, -0.14023292064666748, -0.38407811522483826, 0.6120848059654236]]\n"
      ]
     }
    ],
@@ -65,115 +65,115 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Loss: [[51.096412658691406]]\n",
-      "Epoch 1, Loss: [[50.94953918457031]]\n",
-      "Epoch 2, Loss: [[50.74874496459961]]\n",
-      "Epoch 3, Loss: [[50.512001037597656]]\n",
-      "Epoch 4, Loss: [[50.249454498291016]]\n",
-      "Epoch 5, Loss: [[49.96770095825195]]\n",
-      "Epoch 6, Loss: [[49.67094802856445]]\n",
-      "Epoch 7, Loss: [[49.360862731933594]]\n",
-      "Epoch 8, Loss: [[49.03679656982422]]\n",
-      "Epoch 9, Loss: [[48.69684600830078]]\n",
-      "Epoch 10, Loss: [[48.33946228027344]]\n",
-      "Epoch 11, Loss: [[47.96247482299805]]\n",
-      "Epoch 12, Loss: [[49.03716278076172]]\n",
-      "Epoch 13, Loss: [[48.62165069580078]]\n",
-      "Epoch 14, Loss: [[48.18552780151367]]\n",
-      "Epoch 15, Loss: [[47.735191345214844]]\n",
-      "Epoch 16, Loss: [[47.27521896362305]]\n",
-      "Epoch 17, Loss: [[46.80915451049805]]\n",
-      "Epoch 18, Loss: [[46.3397102355957]]\n",
-      "Epoch 19, Loss: [[45.868804931640625]]\n",
-      "Epoch 20, Loss: [[45.397682189941406]]\n",
-      "Epoch 21, Loss: [[44.926849365234375]]\n",
-      "Epoch 22, Loss: [[44.45603561401367]]\n",
-      "Epoch 23, Loss: [[43.984107971191406]]\n",
-      "Epoch 24, Loss: [[43.50897979736328]]\n",
-      "Epoch 25, Loss: [[43.027957916259766]]\n",
-      "Epoch 26, Loss: [[42.53810119628906]]\n",
-      "Epoch 27, Loss: [[42.03691482543945]]\n",
-      "Epoch 28, Loss: [[41.522586822509766]]\n",
-      "Epoch 29, Loss: [[40.994022369384766]]\n",
-      "Epoch 30, Loss: [[40.45042419433594]]\n",
-      "Epoch 31, Loss: [[41.20321273803711]]\n",
-      "Epoch 32, Loss: [[40.65343475341797]]\n",
-      "Epoch 33, Loss: [[40.0909423828125]]\n",
-      "Epoch 34, Loss: [[43.81804656982422]]\n",
-      "Epoch 35, Loss: [[43.262393951416016]]\n",
-      "Epoch 36, Loss: [[42.68901062011719]]\n",
-      "Epoch 37, Loss: [[42.100948333740234]]\n",
-      "Epoch 38, Loss: [[41.500938415527344]]\n",
-      "Epoch 39, Loss: [[40.89122772216797]]\n",
-      "Epoch 40, Loss: [[40.27348327636719]]\n",
-      "Epoch 41, Loss: [[39.648746490478516]]\n",
-      "Epoch 42, Loss: [[39.01734924316406]]\n",
-      "Epoch 43, Loss: [[38.378997802734375]]\n",
-      "Epoch 44, Loss: [[37.73289489746094]]\n",
-      "Epoch 45, Loss: [[37.07802200317383]]\n",
-      "Epoch 46, Loss: [[36.413333892822266]]\n",
-      "Epoch 47, Loss: [[35.737911224365234]]\n",
-      "Epoch 48, Loss: [[35.05101013183594]]\n",
-      "Epoch 49, Loss: [[34.352176666259766]]\n",
-      "Epoch 50, Loss: [[33.64116287231445]]\n",
-      "Epoch 51, Loss: [[32.917938232421875]]\n",
-      "Epoch 52, Loss: [[32.182647705078125]]\n",
-      "Epoch 53, Loss: [[31.435523986816406]]\n",
-      "Epoch 54, Loss: [[30.676918029785156]]\n",
-      "Epoch 55, Loss: [[29.907255172729492]]\n",
-      "Epoch 56, Loss: [[29.1270809173584]]\n",
-      "Epoch 57, Loss: [[28.337026596069336]]\n",
-      "Epoch 58, Loss: [[27.537874221801758]]\n",
-      "Epoch 59, Loss: [[26.730485916137695]]\n",
-      "Epoch 60, Loss: [[25.915855407714844]]\n",
-      "Epoch 61, Loss: [[25.095073699951172]]\n",
-      "Epoch 62, Loss: [[24.269311904907227]]\n",
-      "Epoch 63, Loss: [[23.43982696533203]]\n",
-      "Epoch 64, Loss: [[22.60794448852539]]\n",
-      "Epoch 65, Loss: [[21.775033950805664]]\n",
-      "Epoch 66, Loss: [[20.94253158569336]]\n",
-      "Epoch 67, Loss: [[20.111900329589844]]\n",
-      "Epoch 68, Loss: [[19.284639358520508]]\n",
-      "Epoch 69, Loss: [[18.462278366088867]]\n",
-      "Epoch 70, Loss: [[17.6463565826416]]\n",
-      "Epoch 71, Loss: [[16.83843231201172]]\n",
-      "Epoch 72, Loss: [[16.040061950683594]]\n",
-      "Epoch 73, Loss: [[15.252798080444336]]\n",
-      "Epoch 74, Loss: [[14.478179931640625]]\n",
-      "Epoch 75, Loss: [[13.717734336853027]]\n",
-      "Epoch 76, Loss: [[12.972949028015137]]\n",
-      "Epoch 77, Loss: [[12.245282173156738]]\n",
-      "Epoch 78, Loss: [[11.53614616394043]]\n",
-      "Epoch 79, Loss: [[10.846905708312988]]\n",
-      "Epoch 80, Loss: [[10.178862571716309]]\n",
-      "Epoch 81, Loss: [[9.533259391784668]]\n",
-      "Epoch 82, Loss: [[8.91126537322998]]\n",
-      "Epoch 83, Loss: [[8.313974380493164]]\n",
-      "Epoch 84, Loss: [[7.742394924163818]]\n",
-      "Epoch 85, Loss: [[7.197449207305908]]\n",
-      "Epoch 86, Loss: [[6.679968357086182]]\n",
-      "Epoch 87, Loss: [[6.190688610076904]]\n",
-      "Epoch 88, Loss: [[5.730238437652588]]\n",
-      "Epoch 89, Loss: [[5.2991533279418945]]\n",
-      "Epoch 90, Loss: [[4.897848606109619]]\n",
-      "Epoch 91, Loss: [[4.526632308959961]]\n",
-      "Epoch 92, Loss: [[4.185689926147461]]\n",
-      "Epoch 93, Loss: [[3.8750836849212646]]\n",
-      "Epoch 94, Loss: [[3.5947415828704834]]\n",
-      "Epoch 95, Loss: [[3.3444435596466064]]\n",
-      "Epoch 96, Loss: [[3.123814344406128]]\n",
-      "Epoch 97, Loss: [[2.932299852371216]]\n",
-      "Epoch 98, Loss: [[2.76914119720459]]\n",
-      "Epoch 99, Loss: [[2.6333529949188232]]\n"
+      "Epoch 0, Loss: [[6.999999523162842]]\n",
+      "Epoch 1, Loss: [[6.991400241851807]]\n",
+      "Epoch 2, Loss: [[6.979496479034424]]\n",
+      "Epoch 3, Loss: [[6.965109825134277]]\n",
+      "Epoch 4, Loss: [[6.948617458343506]]\n",
+      "Epoch 5, Loss: [[6.9302520751953125]]\n",
+      "Epoch 6, Loss: [[6.910172939300537]]\n",
+      "Epoch 7, Loss: [[6.888489246368408]]\n",
+      "Epoch 8, Loss: [[6.865278244018555]]\n",
+      "Epoch 9, Loss: [[6.840594291687012]]\n",
+      "Epoch 10, Loss: [[6.814477443695068]]\n",
+      "Epoch 11, Loss: [[6.786952972412109]]\n",
+      "Epoch 12, Loss: [[6.7579874992370605]]\n",
+      "Epoch 13, Loss: [[6.727555751800537]]\n",
+      "Epoch 14, Loss: [[6.696090221405029]]\n",
+      "Epoch 15, Loss: [[6.663057804107666]]\n",
+      "Epoch 16, Loss: [[6.628650665283203]]\n",
+      "Epoch 17, Loss: [[6.592858791351318]]\n",
+      "Epoch 18, Loss: [[6.555678844451904]]\n",
+      "Epoch 19, Loss: [[6.517096519470215]]\n",
+      "Epoch 20, Loss: [[6.477100849151611]]\n",
+      "Epoch 21, Loss: [[6.435676097869873]]\n",
+      "Epoch 22, Loss: [[6.3928070068359375]]\n",
+      "Epoch 23, Loss: [[6.348477363586426]]\n",
+      "Epoch 24, Loss: [[6.302667617797852]]\n",
+      "Epoch 25, Loss: [[6.255360126495361]]\n",
+      "Epoch 26, Loss: [[6.206536293029785]]\n",
+      "Epoch 27, Loss: [[6.1561737060546875]]\n",
+      "Epoch 28, Loss: [[6.104251861572266]]\n",
+      "Epoch 29, Loss: [[6.050595760345459]]\n",
+      "Epoch 30, Loss: [[5.995656967163086]]\n",
+      "Epoch 31, Loss: [[5.938943386077881]]\n",
+      "Epoch 32, Loss: [[5.880589008331299]]\n",
+      "Epoch 33, Loss: [[5.820573806762695]]\n",
+      "Epoch 34, Loss: [[5.7588791847229]]\n",
+      "Epoch 35, Loss: [[5.69548225402832]]\n",
+      "Epoch 36, Loss: [[5.6295485496521]]\n",
+      "Epoch 37, Loss: [[5.5687127113342285]]\n",
+      "Epoch 38, Loss: [[5.505911827087402]]\n",
+      "Epoch 39, Loss: [[5.441330432891846]]\n",
+      "Epoch 40, Loss: [[5.374946117401123]]\n",
+      "Epoch 41, Loss: [[5.30673360824585]]\n",
+      "Epoch 42, Loss: [[5.236675262451172]]\n",
+      "Epoch 43, Loss: [[5.164762496948242]]\n",
+      "Epoch 44, Loss: [[5.090988636016846]]\n",
+      "Epoch 45, Loss: [[5.015352249145508]]\n",
+      "Epoch 46, Loss: [[4.937856197357178]]\n",
+      "Epoch 47, Loss: [[4.858503341674805]]\n",
+      "Epoch 48, Loss: [[4.777299404144287]]\n",
+      "Epoch 49, Loss: [[4.694251537322998]]\n",
+      "Epoch 50, Loss: [[4.610053062438965]]\n",
+      "Epoch 51, Loss: [[4.533647060394287]]\n",
+      "Epoch 52, Loss: [[4.457070350646973]]\n",
+      "Epoch 53, Loss: [[4.378766059875488]]\n",
+      "Epoch 54, Loss: [[4.298698902130127]]\n",
+      "Epoch 55, Loss: [[4.216852188110352]]\n",
+      "Epoch 56, Loss: [[4.1332244873046875]]\n",
+      "Epoch 57, Loss: [[4.047825813293457]]\n",
+      "Epoch 58, Loss: [[3.9606802463531494]]\n",
+      "Epoch 59, Loss: [[3.871817111968994]]\n",
+      "Epoch 60, Loss: [[3.7812771797180176]]\n",
+      "Epoch 61, Loss: [[3.6891050338745117]]\n",
+      "Epoch 62, Loss: [[3.595350980758667]]\n",
+      "Epoch 63, Loss: [[3.500065565109253]]\n",
+      "Epoch 64, Loss: [[3.40830659866333]]\n",
+      "Epoch 65, Loss: [[3.3221356868743896]]\n",
+      "Epoch 66, Loss: [[3.234700918197632]]\n",
+      "Epoch 67, Loss: [[3.146005868911743]]\n",
+      "Epoch 68, Loss: [[3.056069850921631]]\n",
+      "Epoch 69, Loss: [[2.968005895614624]]\n",
+      "Epoch 70, Loss: [[2.884392738342285]]\n",
+      "Epoch 71, Loss: [[2.799769639968872]]\n",
+      "Epoch 72, Loss: [[2.71417236328125]]\n",
+      "Epoch 73, Loss: [[2.627645969390869]]\n",
+      "Epoch 74, Loss: [[2.5402438640594482]]\n",
+      "Epoch 75, Loss: [[2.4520254135131836]]\n",
+      "Epoch 76, Loss: [[2.363323926925659]]\n",
+      "Epoch 77, Loss: [[2.2801637649536133]]\n",
+      "Epoch 78, Loss: [[2.198258638381958]]\n",
+      "Epoch 79, Loss: [[2.1241071224212646]]\n",
+      "Epoch 80, Loss: [[2.053971529006958]]\n",
+      "Epoch 81, Loss: [[1.9837194681167603]]\n",
+      "Epoch 82, Loss: [[1.9222285747528076]]\n",
+      "Epoch 83, Loss: [[1.8645979166030884]]\n",
+      "Epoch 84, Loss: [[1.8070971965789795]]\n",
+      "Epoch 85, Loss: [[1.7497856616973877]]\n",
+      "Epoch 86, Loss: [[1.69270920753479]]\n",
+      "Epoch 87, Loss: [[1.635901689529419]]\n",
+      "Epoch 88, Loss: [[1.5860180854797363]]\n",
+      "Epoch 89, Loss: [[1.549289345741272]]\n",
+      "Epoch 90, Loss: [[1.5252861976623535]]\n",
+      "Epoch 91, Loss: [[1.5063540935516357]]\n",
+      "Epoch 92, Loss: [[1.4867674112319946]]\n",
+      "Epoch 93, Loss: [[1.4657847881317139]]\n",
+      "Epoch 94, Loss: [[1.4437905550003052]]\n",
+      "Epoch 95, Loss: [[1.4210562705993652]]\n",
+      "Epoch 96, Loss: [[1.4057846069335938]]\n",
+      "Epoch 97, Loss: [[1.391058087348938]]\n",
+      "Epoch 98, Loss: [[1.3758251667022705]]\n",
+      "Epoch 99, Loss: [[1.3620288372039795]]\n"
      ]
     }
    ],
    "source": [
     "for i in range(100):\n",
     "    z=m(X)\n",
-    "    loss=F.mean_square_error(y,z)\n",
+    "    loss=F.mean_absolute_error(y,z)\n",
     "    optim.zero_grad(set_to_none=True)\n",
-    "    loss.backward()\n",
+    "    loss.backward()    \n",
     "    print(f\"Epoch {i}, Loss: {loss}\")\n",
     "    optim.step()"
    ]
@@ -188,7 +188,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.0657559633255005, 1.5500068664550781, 0.45008131861686707, -1.1809675693511963, -0.6125033497810364, 1.4850835800170898, 1.2951799631118774, -0.722270131111145], [-1.1271357536315918, 1.5600342750549316, 0.0060208020731806755, -1.3926573991775513, 0.1659698486328125, 1.412765383720398, 0.8309667110443115, -0.04168413579463959], [-1.0884196758270264, 1.1196907758712769, -0.47020044922828674, -1.0800423622131348, -0.5751269459724426, 1.4913264513015747, 1.1719778776168823, 0.10700058937072754], [-0.10319121927022934, 1.268546223640442, -0.7068883776664734, -1.2801282405853271, 0.15878704190254211, 1.06638503074646, 0.5544611811637878, 0.005822013597935438]]\n"
+      "[[-0.094978466629982, 0.39208367466926575, -1.204923391342163, 0.9246472716331482, -0.7280697822570801, 0.306770920753479, 0.05805277079343796, 0.905455470085144], [0.20606379210948944, 0.5714223980903625, -1.2255041599273682, 1.2433363199234009, -1.093522310256958, -0.10723502933979034, -0.1763601452112198, 0.2525697350502014], [-1.0167080163955688, -0.36320218443870544, -0.604416012763977, 0.9235413670539856, -0.977214515209198, 0.5758801102638245, 0.5426807999610901, 1.365809679031372], [0.26514163613319397, 0.10467658936977386, -1.4577953815460205, 0.3670705556869507, -0.8181238770484924, 0.182611882686615, 0.021070297807455063, 1.4833612442016602]]\n"
      ]
     }
    ],
@@ -198,17 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "7dcc8471",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[6.09556770324707], [7.451502799987793]]"
+       "[[6.80731725692749], [8.06432056427002]]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,11 +221,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "787f531b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "m.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fad0d9dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[6.80731725692749], [8.06432056427002]]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from util.util_for_file import load_obj\n",
+    "model = load_obj()\n",
+    "model(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "11a0801e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [[4.598463535308838], [5.832486152648926]]"
+   ]
   }
  ],
  "metadata": {
